--- a/kmaps-app/src/views/Kmaps/subjectsinfo.scss
+++ b/kmaps-app/src/views/Kmaps/subjectsinfo.scss
@@ -190,13 +190,13 @@ main.subjects {
                 padding-left: 0;
             }
 
-            ul,
+            /* ul,
             li {
                 list-style-type: none;
-                padding-inline-start: 0px;
+                padding-inline-start: 0;
                 margin: 0;
                 padding: 0;
-            }
+            } */
         }
     } /*  End of c-content__main__kmaps */
 
