--- a/kmaps-app/src/views/Texts/TextsViewer.sass
+++ b/kmaps-app/src/views/Texts/TextsViewer.sass
@@ -366,6 +366,7 @@
     color: #333
 
   #sidecolumn-ctrl
+    display: none /** doesn't work **/
     font-size: 1.25rem
     color: #aaa
     border: 2px solid #bbb
@@ -1170,11 +1171,14 @@
 
   .nav-tabs.nav-justified > a
     position: relative
-    top: -0.4rem
+    /* top: -0.4rem*/
     font-size: 0.93em !important
     text-transform: uppercase
     line-height: 1.32em
-    padding-top: 1.5rem
+    padding-top: 1.25rem
+    border-radius: 0.5rem 0.5rem 0 0
+    border: thin solid #CCC
+    border-bottom: none
 
     &.active::before
       color: #555 !important
@@ -1255,3 +1259,22 @@
           vertical-align: super
           font-size: 70%
 
+.l-content__main
+  #text-alt-viewer
+    position: absolute
+    top: 8.25rem
+    left: 2.5rem
+    width: 73vw
+    height: 90vh
+
+    iframe.full-page-frame
+      width: 100%
+      height: 100%
+      padding-top: 1rem
+      background: white
+
+    .close-iframe
+      float: right
+      position: relative
+      top: 2.5rem
+      right: 1.5rem
