--- a/kmaps-app/src/views/Texts/TextsViewer.sass
+++ b/kmaps-app/src/views/Texts/TextsViewer.sass
@@ -1267,6 +1267,9 @@
     width: 73vw
     height: 90vh
 
+    &.hidden
+      display: none
+
     iframe.full-page-frame
       width: 100%
       height: 100%
