getting related images in kmaps to view

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -324,8 +324,8 @@ div.image-wrapper.center figcaption {
     color: #fff;
     padding: 0 1rem 0.5rem 1.5rem;
     margin-top: 0.5rem;
-    margin-bottom: 1.75rem;
-    margin-left: -0.75rem;
+    margin-bottom: -0.25rem;
+    /*margin-left: -0.75rem;*/
     font-size: 1.44rem;
     line-height: 1.8;
     border-radius: 0.5rem 0.5rem 0 0;
