--- a/kmaps-app/src/views/common/KmapTree/kmapTree.scss
+++ b/kmaps-app/src/views/common/KmapTree/kmapTree.scss
@@ -7,7 +7,9 @@
 
 .c-kmapleaf {
     margin-top: 0.1rem;
-
+    white-space: nowrap;
+    max-width: inherit;
+    overflow: hidden;
     .toggle-icon {
         display: inline-block;
         margin-right: 0.5rem;
