updating to style of feature cards and image place icon

--- a/kmaps-app/src/views/Images/images.scss
+++ b/kmaps-app/src/views/Images/images.scss
@@ -174,7 +174,11 @@
     }
     .u-data.row {
         line-height: 3rem;
+        .u-icon__places {
+            color: #000000;
+        }
     }
+
     span[class*='u-icon'] {
         padding-right: 4px;
         font-size: 1.25em;
