--- a/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
+++ b/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
@@ -3,7 +3,9 @@
 // JSON Dev Utility -
 .card-body .c-button__json {
     position: absolute;
-    bottom: 0.5rem;
+    bottom: 0rem;
+    background-color: white;
+    padding-bottom: 0.2rem;
     right: 1.35rem;
     width: 90%;
 }
