--- a/kmaps-app/src/views/common/KmapTree/kmapTree.scss
+++ b/kmaps-app/src/views/common/KmapTree/kmapTree.scss
@@ -14,6 +14,12 @@
         display: inline-block;
         margin-right: 0.5rem;
     }
+    .label a {
+        color: #000;
+        &:hover {
+            color: #df3d26;
+        }
+    }
 }
 
 .leafend {
