--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -46,12 +46,13 @@ body.html {
 
 .l-content__rightsidebar {
     /*  flex: 0 0 28rem;*/
-    width: 25%;
+    /*min-width: 25%;*/
     margin: 1rem 0 0 1.5rem;
     max-width: 35rem;
-    min-width: 29rem;
+    min-width: calc(max(25vw, 290px));
     font-size: 1.4rem;
     background-color: #fff;
+    resize: horizontal;
 
     .advanced-search-and-tree {
         border-left: 2px solid #ccc;
