--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -158,6 +158,7 @@ div.image-wrapper.center figcaption {
     padding: 1rem 2rem 6rem 2.5rem;
     font-size: 1.4rem;
     /* height: 100vh;*/
+    min-height: 50vh;
 }
 // * Local fix for responsive display - temp
 .c-content__main__kmaps img,
