right side column styles and formatting

--- a/kmaps-app/public/css/searchui.css
+++ b/kmaps-app/public/css/searchui.css
@@ -420,10 +420,10 @@
 }
 .sui-advBox {
     border: 1px solid #a4baec;
-    width: calc(100% - 28px);
-    margin: 0 0 8px 12px;
+    width: calc(100% - 10px);
+    /*  margin: 0 0 8px 12px;
     padding: 4px 8px 2px 8px;
-    border-radius: 6px;
+    border-radius: 6px; */
 }
 .sui-advHeader:hover {
     color: #668eec;
