--- a/kmaps-app/src/Om.css
+++ b/kmaps-app/src/Om.css
@@ -506,7 +506,7 @@
     cursor: default;
     color: #000;
     letter-spacing: 0.0375rem;
-    margin-left: 1rem;
+    margin-left: 0.5rem;
 }
 
 .sui-advHeader:hover {
@@ -667,13 +667,13 @@
     background-color: #fafafa;
     text-align: left;
     border: 0.1rem solid #ddd;
-    border-top: 0.3rem solid #ccc;
+    border-top: 0.3rem solid #ddd;
     border-radius: 0 0 1.5rem 1.5rem;
     padding: 0.8rem 0.8rem 0.3rem;
     font-size: 1.25rem;
     color: #000;
     margin: 1.7rem 0;
-    box-shadow: inset 0.25rem 0.25rem 0.8rem #ddd;
+    box-shadow: inset 0.25rem 0.25rem 1rem 0.2rem #eee;
 }
 
 .sui-advEdit-facet-ctrls-btns {
