--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -29,13 +29,16 @@
 }
 
 .sui-advBox {
-    border: 1px solid #ddd;
-    border-bottom-color: #ccc;
-    margin: 0 5px;
-    padding: 1.25rem 1rem 0;
-    border-radius: 2px;
+    border: 1px solid #ccc;
+    border-width: 0 0 1px 0;
+    margin: 0 0 0 1rem;
+    padding: 1.25rem 0 0;
     background-color: #fff;
     min-height: 4.75rem;
+}
+
+.l-column__search > section .sui-advBox:first-child .facetItem {
+    display: none;
 }
 
 .sui-advBox.sui-advBox-associated.subjects {
@@ -59,7 +62,7 @@
     text-transform: uppercase;
     display: flex;
     height: 1.5rem;
-    font-size: 1.25rem;
+    font-size: 1.45rem;
     cursor: default;
 }
 
@@ -77,7 +80,7 @@
 .sui-advHeader .badge {
     position: relative;
     bottom: 0;
-    right: -0.25rem;
+    right: 0;
     padding: 0.5rem 3.5rem 0.5rem 1rem;
     border-radius: 0.3rem;
     color: #fff;
@@ -223,6 +226,11 @@
     margin: 1.25rem 0;
 }
 
+.l-column__search > section .sui-advBox:first-child .sui-advEdit {
+    font-size: 1.45rem;
+    text-style: capitalize;
+}
+
 .sui-advEdit-facet-ctrls-btns {
     position: relative;
     top: 0.4rem;
@@ -243,6 +251,7 @@
     background-color: #fff;
     border-color: #888;
     color: #222;
+    border: none !important;
 }
 .sui-advEdit-facet-ctrls-btns .btn:focus,
 .sui-advEdit-facet-ctrls-btns .btn:active {
