--- a/kmaps-app/public/css/searchui.css
+++ b/kmaps-app/public/css/searchui.css
@@ -419,9 +419,9 @@
     height: 36px;
 }
 .sui-advBox {
-    border: 1px solid #a4baec;
+ /*   border: 1px solid #a4baec;
     width: calc(100% - 10px);
-    /*  margin: 0 0 8px 12px;
+    margin: 0 0 8px 12px;
     padding: 4px 8px 2px 8px;
     border-radius: 6px; */
 }
@@ -457,7 +457,7 @@
     display: none;
     background-color: #fafafa;
     text-align: left;
-    border: 0.1rem solid #eee;
+    border: 1px solid #e0e0e0;
     border-bottom-width: 0.2rem;
     border-radius: 0 0 2rem 2rem;
     padding: 0.8rem 0.8rem 0.3rem;
