--- a/kmaps-app/src/legacy/searchui.css
+++ b/kmaps-app/src/legacy/searchui.css
@@ -423,11 +423,11 @@
     height: 36px;
 }
 .sui-advBox {
-    border: 1px solid #a4baec;
+ /*   border: 1px solid #a4baec;
     width: calc(100% - 28px);
     margin: 0 0 8px 12px;
     padding: 4px 8px 2px 8px;
-    border-radius: 6px;
+    border-radius: 6px; */
 }
 
 .sui-advHeader {
@@ -459,7 +459,7 @@
 }
 
 .sui-advEdit {
-    display: none;
+  /*  display: none;
     background-color: #fafafa;
     text-align: left;
     border: 0.1rem solid #555;
@@ -468,7 +468,7 @@
     font-size: 1.25rem;
     color: #000;
     margin: 1.7rem 0;
-    box-shadow: inset 0.35rem 0.35rem 0.75rem #d0d0d0;
+    box-shadow: inset 0.35rem 0.35rem 0.75rem #d0d0d0; */
 }
 .sui-advEditBut {
     display: inline-block;
