--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -30,14 +30,15 @@
 
 .sui-advBox {
    /* border: 1px solid #ddd;
-    border-width: .1rem 0 0 0;*/
+    border-width: .1rem 0 0 0; */
     margin: 0 0 0 1rem;
     padding: 1.25rem 0 0;
     min-height: 4.75rem;
     width: calc(100% - 10px);
+    border: none;
 }
 .l-column__search > section .sui-advBox:nth-child(even) {
-   /* background-color: #fff; */
+
 }
 
 .l-column__search > section .sui-advBox:first-child .facetItem {
@@ -151,9 +152,8 @@
     transition: color 250ms ease-in;
 }
 
-.sui-advBox-recent
-    .c-HistoryViewer__relatedRecentItem:hover
-    .c-HistoryViewer__removeItem {
+.sui-advBox-recent .c-HistoryViewer__relatedRecentItem:hover,
+.c-HistoryViewer__removeItem {
     color: #aaa;
 }
 
@@ -228,7 +228,7 @@
 
 .sui-advBox:first-child .sui-advEdit {
     font-size: 1.45rem;
-    text-style: capitalize;
+    text-transform: capitalize;
 }
 
 .sui-advEdit-facet-ctrls-btns {
@@ -274,7 +274,7 @@
 }
 input:focus-visible {
     border-width: .1rem !important;
-    order-radius:2rem !important;
+    border-radius: 2rem !important;
 }
 .sui-advPlus {
     position: relative;
@@ -301,7 +301,7 @@ input:focus-visible {
     display: inline-block;
     cursor: pointer;
     color: #668eec;
-    border: 0.5px solid #999;
+    border: 0.5rem solid #999;
     border-radius: 2px;
     padding: 0 0 1px 3px;
     margin: 2px 0;
