--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -15,8 +15,13 @@
   border-bottom: 1px solid #aaa;
   border-bottom-left-radius: 5px;
   font-size: 15px;
-  overflow: hidden;*/
+  overflow: hidden; */
 }
+
+.l-column__search {
+    height: 100%;
+    padding-bottom:10rem;
+  }
 
 .sui-advTop {
     text-align: center;
@@ -33,9 +38,10 @@
     border-width: .1rem 0 0 0; */
     margin: 0 0 0 1rem;
     padding: 1.25rem 0 0;
-    min-height: 4.75rem;
+    min-height: 3.75rem;
     width: calc(100% - 10px);
     border: none;
+    cursor: default;
 }
 .l-column__search > section .sui-advBox:nth-child(even) {
 
