search filters style updates

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -516,12 +516,12 @@ ul.fancytree-container {
 .l-column__search nav:nth-of-type(2) > a:active .badge {
     color: #4d59ca;
 }
-
+/*
 .l-column__search > section {
     margin-top: 4rem;
     padding-right: 1rem;
 }
-
+*/
 .sui-nameEntry-meta {
     margin-top: 0.75rem;
 }
