--- a/kmaps-app/public/css/searchui.css
+++ b/kmaps-app/public/css/searchui.css
@@ -442,7 +442,7 @@
 .sui-advTermRem {
     display: inline-block;
     cursor: pointer;
-    margin-right: 4px;
+    margin-lelft: .2rem;
 }
 
 .sui-advValueRem:hover {
@@ -483,10 +483,10 @@
     display: inline-block;
     cursor: pointer;
     color: #668eec;
-    border: 0.5px solid#999;
+    border: .1rem solid#999;
     border-radius: 2px;
     padding: 0 0 1px 3px;
-    margin: 2px 0;
+    margin: .2rem 0.5rem .2rem 0;
 }
 .sui-boolItem {
     display: inline-block;
@@ -501,6 +501,7 @@
 }
 .sui-advEditLine {
     cursor: pointer;
+    color:#000;
     padding: 0.2rem 1rem;
     border-bottom: 2px solid #fafafa;
 }
