--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -56,6 +56,7 @@
     display: flex;
     height: 1.5rem;
     font-size: 1.45rem;
+    height:1.9rem;
 }
 .sui-advBox:hover,
 .sui-advHeader:hover {
@@ -64,10 +65,10 @@
 }
 
 .sui-advHeader > .icon {
-    margin: 0 1.8rem 0 0.5rem;
+    margin: 0 1.25rem 0 .5rem;
     font-size: 2rem;
     position: relative;
-    top: -0.5rem;
+    top: -0.7rem;
     left: 0.25rem;
 }
 .sui-advHeader .badge {
@@ -174,16 +175,21 @@
 .sui-advTerm {
     /* margin: 0.5rem 0 -1rem 0.6rem; */
     font-size: 1.1rem;
-    padding: 0.25rem 0.5rem 0.75rem 4rem;
+    padding: 0.25rem 0.5rem 0.75rem 3.5rem;
     text-transform:capitalize;
 }
 .sui-advTerm .icon::before {
     color: red;
 }
-
 .sui-advTerm:empty {
     display: none;
 }
+.sui-advTerm > div {
+    display:inline;
+    margin-right:1rem;
+    white-space: nowrap;
+}
+
 
 .sui-advTerm div > span:first-child::before {
     color: #999;
