--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -47,7 +47,7 @@ body.html {
 .l-content__rightsidebar {
     /*  flex: 0 0 28rem;*/
     /*min-width: 25%;*/
-    margin: 1rem 0 0 1.5rem;
+    margin: 1rem 0 0;
     max-width: 35rem;
     min-width: calc(max(25vw, 290px));
     font-size: 1.4rem;
