search filter style updates, body font family

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -10,6 +10,7 @@ html {
     font-size: 62.5%;
 }
 body {
+    font-family: $font-family-sans, sans-serif;
     text-rendering: optimizeLegibility;
     background-color: #eee;
     font-size: 1.4rem;
