--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -17,13 +17,11 @@
 }
 
 .sui-advBox {
-   /* border: 1px solid #ddd;
-    border-width: .1rem 0 0 0; */
+   border-bottom: 1px solid #e0e0e0;
     margin: 0 0 0 1rem;
     padding: 1.25rem 0 0;
     min-height: 4.5rem;
     width: calc(100% - 10px);
-    border: none;
     cursor: default;
 }
 .l-column__search > section .sui-advBox:nth-child(even) {
@@ -74,7 +72,7 @@
 }
 .sui-advHeader .badge {
     padding: 0.5rem 3.5rem 0.5rem 1rem;
-    border-radius: 0.3rem;
+    border-radius: 0.5rem;
     color: #fff;
     cursor: pointer;
     font-size: 1.1rem;
