--- a/kmaps-app/public/css/searchui.css
+++ b/kmaps-app/public/css/searchui.css
@@ -433,7 +433,7 @@
 }
 
 .sui-advTerm {
-    margin: 0.5rem 0 -1rem 1rem;
+    margin: -.5rem 0 0 1rem;
     font-size: 1.1rem;
     padding: 0.5rem 0.5rem 0 1.5rem;
 }
