Search results styles for top section

--- a/kmaps-app/public/css/searchui.css
+++ b/kmaps-app/public/css/searchui.css
@@ -442,7 +442,7 @@
 .sui-advTermRem {
     display: inline-block;
     cursor: pointer;
-    margin-lelft: .2rem;
+    margin-left: .2rem;
 }
 
 .sui-advValueRem:hover {
