Search results styles for top filter display

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -556,6 +556,7 @@ ul.fancytree-container {
 .sui-facetList-horiz > span {
     display:block;
     font-weight:bold;
+    margin-bottom:.5rem;
 }
 .sui-facetList-horiz > div {
     display: inline;
